--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 .main_div {
     margin-top: 0px;
-    height: 560px;
+    height: 1100px;
     width: 100%;
 }
 
@@ -120,13 +120,10 @@ li {
     box-shadow: 1px 1px 5px #D3D3D3;
   }
 #full_product {
-    position: relative;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 600px;
-  }
-  #single_product {
     float: left;
-    padding: 20px;
-   }
+    margin-left: auto;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    width: 400px;
+  }
