--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,34 +81,41 @@ li {
     display:flex;
     flex-direction:row;
     padding-top: 50px;
-    width: 415px;
+    width: 400px;
     height: 300px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
 }
 .login_form {
-    margin: 30px;
+    padding: 0px;
+    width: 200px;
 }
 .register_form {
-    margin: 30px;
+    padding: 0px;
+    width: 200px;
 }
 
 .forms_account_view {
     display:flex;
     flex-direction:row;
     padding-top: 50px;
-    width: 370px;
+    width: 400px;
     height: 300px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
 }
 .account_information {
-    padding: 30px;
+    padding: 0px;
+    width: 200px;
 }
 .modify_form {
-    padding: 30px;
+    padding: 0px;
+    width: 200px;
+}
+.input {
+    width: 160px;
 }
 
 .main-nav {
