--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,10 +127,36 @@ li {
     box-shadow: 1px 1px 5px #D3D3D3;
   }
 #full_product {
+    position: relative;
     display: block;
     float: left;
     margin-left: auto;
     margin-bottom: 15px;
     margin-right: 15px;
     width: 400px;
+    height: 300px;
   }
+
+#single_product {
+    position: relative;
+    width: 400px;
+    height: 300px;
+}
+.band span {
+    display: inline-block;
+    /* vertical-align: middle; */
+    line-height: normal;
+    bottom: 10px;
+    padding-left: 5px;
+}
+.band {
+    background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    height: 30px;
+    line-height: 30px;
+    width: 400px;
+    font-family: Verdana, Geneva, sans-serif;
+    color: #FFF;
+    bottom: 0px;
+    z-index: 1;
+}
