--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,20 +133,25 @@ li {
     margin-left: auto;
     margin-bottom: 15px;
     margin-right: 15px;
-    width: 400px;
-    height: 300px;
+    width: 300px;
+    height: 225px;
   }
 
 #single_product {
     position: relative;
-    width: 400px;
-    height: 300px;
+    width: 300px;
+    height: 225px;
+}
+.gallery_picture {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 .band span {
     display: inline-block;
     /* vertical-align: middle; */
     line-height: normal;
-    bottom: 10px;
+    bottom: 0px;
     padding-left: 5px;
 }
 .band {
@@ -154,7 +159,7 @@ li {
     position: absolute;
     height: 30px;
     line-height: 30px;
-    width: 400px;
+    width: 300px;
     font-family: Verdana, Geneva, sans-serif;
     color: #FFF;
     bottom: 0px;
