--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,9 +147,26 @@ li {
     width: 100%;
     height: auto;
 }
+
+#full_product_small {
+    position: relative;
+    display: block;
+    float: left;
+    margin-left: auto;
+    margin-bottom: 1px;
+    margin-right: 10px;
+    width: 200px;
+    height: 160px;
+  }
+
+#single_product_small {
+    position: relative;
+    width: 200px;
+    height: 160px;
+}
+
 .band span {
     display: inline-block;
-    /* vertical-align: middle; */
     line-height: normal;
     bottom: 0px;
     padding-left: 5px;
@@ -164,4 +181,30 @@ li {
     color: #FFF;
     bottom: 0px;
     z-index: 1;
+}
+
+.mainView {
+    width: 100%;
+    height: 1000px;
+    background-color: rgb(216, 215, 215);
+}
+
+.main1 {
+    float: left;
+    width: 600px;
+}
+
+.main2 {
+    background-color: rgb(250, 176, 176);
+    display: inline;
+}
+
+.filters_list {
+    background-color: rgb(200, 200, 252);
+    height: 100px;
+    width: 100%;
+}
+
+.filter {
+    float: left;
 }
