--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,6 +287,9 @@ h5 {
     height: 90px;
     width: 90px;
 }
+.filter_box:focus {
+    outline: 1px solid blue;
+}
 .filter {
     display: block;
     margin-left: auto;
