--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,28 +183,6 @@ li {
     z-index: 1;
 }
 
-/* LEFT BOX */
-.left_box {
-    display: inline-block;
-}
-.snap_button {
-    width: 300px;
-}
-.camera_view, .snap_button, .snap_view {
-    display: block;
-    margin: auto;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-.left_box {
-    margin-left: 70px;
-    margin-top: 10px;
-    float: left;
-    height: 65vh;
-    width: 35vw;
-    /* background-color: rgb(231, 252, 223);  */
-}
-
 
 /** BOX SMALL **/
 .right_box_top {
@@ -264,14 +242,15 @@ h5 {
     margin-left: 4px;
     margin-bottom: 7px;
     margin-right: 7px;
-    width: 240px;
+    width: 430px;
   }
 .gallery_picture {
     display: block;
-    width: 240px;
+    width: 430px;
     height: auto;
 }
 
+/* FILTERS */
 .filters_list {
     /* background-color: rgb(200, 200, 252); */
     height: 90px;
@@ -297,9 +276,53 @@ h5 {
     height: 80px;
 }
 
+/* LEFT BOX */
+.left_box {
+    display: inline-block;
+}
+.snap_button {
+    position: absolute;
+    top: 330px;
+    width: 300px;
+}
+.camera_view, .snap_button, .snap_view {
+    display: block;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.left_box {
+    margin-left: 70px;
+    margin-top: 10px;
+    float: left;
+    height: 800px;
+    width: 600px;
+    /* background-color: rgb(231, 252, 223);  */
+}
+.middle_box {
+    position: relative;
+    height: 800px;
+    width: 600px;
+}
 .camera_view {
-    height: 33vh;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 430px;
+	height: 320px;
+}
+
+.filter_img
+{
+    position: absolute;
+    z-index: 10;
+    top: 0px;
+    left: 130px;
+    width: auto;
+	height: 160px;
 }
 .snap_view {
-    height: 33vh;
+    position: absolute;
+    width: 430px;
+    height: 320px;
+    bottom: 50px;
 }
