--- a/public/css/style.css
+++ b/public/css/style.css
@@ -367,3 +367,9 @@ a {
 #imgLoader {
     display: none;
 }
+.imported {
+    position: absolute;
+    top: 400px;
+    height: 300px;
+    width: 300px;
+}
