--- a/public/css/style.css
+++ b/public/css/style.css
@@ -369,7 +369,8 @@ a {
 }
 .imported {
     position: absolute;
-    top: 400px;
-    height: 300px;
-    width: 300px;
+    top: 0px;
+    left: 0px;
+    width: 430px;
+    height: 320px;
 }
