--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,33 +130,37 @@ h6 {
 
 /** FORMS **/
 .forms {
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     padding-top: 50px;
-    width: 427px;
-    height: 300px;
+    width: 430px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
 }
 .login_form {
-    padding: 0px;
-    width: 240px;
-    height: 230px;
+    width: 210px;
+    min-height: 210px;
+    height: 232px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
     border-radius: 20px;
     padding: 15px;
 }
 .register_form {
-    padding: 0px;
-    width: 200px;
-    height: 395px;
-    margin-left: 20px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
+    width: 200px;
+    max-height: 800px;
+    /* height: 395px; */
+    margin-left: 20px;
     border-radius: 20px;
     padding: 15px;
+    overflow: hidden;
+}
+.registration_message {
+    padding: 10px;
+    width: 220px;
 }
 
 .forms_account_view {
@@ -164,10 +168,26 @@ h6 {
     flex-direction:row;
     padding-top: 50px;
     width: 450px;
-    height: 580px;
+    /* height: 580px; */
     position: relative;
     margin-left: auto;
     margin-right: auto;
+}
+.account_modified_view {
+    width: 300px;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: inline-block;
+}
+.reset_password_form {
+    width: 500px;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: inline-block;
 }
 .account_information {
     padding: 0px;
@@ -178,13 +198,15 @@ h6 {
     padding: 15px;
 }
 .modify_form {
-    padding: 0px;
-    width: 200px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
+    padding: 0px;
+    width: 200px;
+    max-height: 800px;
     border-radius: 20px;
     padding: 15px;
     margin-left: 20px;
+    overflow: hidden;
 }
 #modify_button {
     width: 90px;
