--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,6 +192,7 @@ h6 {
 .account_information {
     padding: 0px;
     width: 200px;
+    height: 360px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
     border-radius: 20px;
